--- a/composer.json
+++ b/composer.json
@@ -1,8 +1,9 @@
 {	
     "require":{
+    	"php": "^7.2.0",
         "phpmailer/phpmailer": "^6.1"
     },	
     "require-dev": {
-        "heroku/heroku-buildpack-php": "*"
+        "heroku/heroku-buildpack-php": "*",
     }
 }
