--- a/config.php.sample
+++ b/config.php.sample
@@ -10,13 +10,14 @@
 	$mail = new PHPMailer();
 
 	// Settings
-	$mail->IsSMTP();
-	$mail->CharSet = 'UTF-8';
-	$mail->Host       = "mail.example.com";
-	$mail->SMTPDebug  = 0;
-	$mail->SMTPAuth   = true;
-	$mail->Port       = 25;
-	$mail->Username   = SENDER_EMAIL;
-	$mail->Password   = SENDER_PASS;
+	$mail = new PHPMailer();
+    $mail->IsSMTP();
+    $mail->SMTPDebug = 0;
+    $mail->SMTPAuth = true;
+    $mail->SMTPSecure = 'tls';
+    $mail->Host = 'smtp.gmail.com';
+    $mail->Port = 587;
+    $mail->Username = SENDER_EMAIL;
+    $mail->Password = SENDER_PASS;
 
 	$mail->isHTML(true);
